--- a/src/template.html
+++ b/src/template.html
@@ -5,23 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="../dist/style/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Team Profile</title>
 </head>
 
 <body class="bg-dark text-light">
-    <header class="container text-center">
-        <div>
+    <header class="text-center">
+        <div class="bg-light text-dark fw-bolder">
             <h1>Team Profile</h1>
         </div>
     </header>
     <main>
         <div id='cardHolder' class="container">
-            <div class="row">
+            <div class="row justify-content-center">
                 <!-- card start -->
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <div class="card text-dark shadow mb-3">
                         <div class="card-body">
                             <div class="d-flex flex-row justify-content-between">
@@ -42,7 +43,8 @@
                     </div>
                 </div>
                 <!-- card end -->
-                <div class="col-md-4">
+                <!-- card start -->
+                <div class="col-sm-4">
                     <div class="card text-dark shadow mb-3">
                         <div class="card-body">
                             <div class="d-flex flex-row justify-content-between">
@@ -62,6 +64,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- card end -->
             </div>
         </div>
     </main>
