--- a/src/template.html
+++ b/src/template.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="../dist/style/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Team Profile</title>
@@ -26,18 +24,19 @@
                     <div class="card text-dark shadow mb-3">
                         <div class="card-body">
                             <div class="d-flex flex-row justify-content-between">
-                                <h2 class="card-title">Team Member Name</h2>
+                                <h2 class="card-title">${name}</h2>
                                 <span class="material-icons">
-                                    engineering
+                                    ${role ==`Engineer`? `engineering` :
+                                        role ==`Intern`? `history_edu` : `cases`}
                                 </span>
                             </div>
                             <div class="mb-3">
-                                <h3 class="card-subtitle text-muted">Team Member Role</h3>
+                                <h3 class="card-subtitle text-muted">${role}</h3>
                             </div>
                             <div>
-                                <p class="card-text">ID: idnumber</p>
-                                <p class="card-text">Email: email@thing</p>
-                                <p class="card-text">Misc: school/github/officenumber</p>
+                                <p class="card-text">ID: ${id}</p>
+                                <p class="card-text">Email: ${email}</p>
+                                <p class="card-text">${misc}</p>
                             </div>
                         </div>
                     </div>
