added wite to file logic

--- a/src/template.html
+++ b/src/template.html
@@ -35,7 +35,7 @@
                             </div>
                             <div>
                                 <p class="card-text">ID: ${id}</p>
-                                <p class="card-text">Email: ${email}</p>
+                                <p class="card-text">Email: <a href="mailto:${email}">${email}</a></p>
                                 <p class="card-text">${misc}</p>
                             </div>
                         </div>
