--- a/src/template.html
+++ b/src/template.html
@@ -10,9 +10,9 @@
     <title>Team Profile</title>
 </head>
 
-<body class="bg-dark text-light">
+<body class="">
     <header class="text-center">
-        <div class="bg-light text-primary fw-bolder">
+        <div class="bg-light text-primary fw-bolder p-4 mb-3">
             <h1>Team Profile</h1>
         </div>
     </header>
@@ -25,13 +25,13 @@
                         <div class="card-body p-4">
                             <div class="d-flex flex-row justify-content-between pb-2">
                                 <h2 class="card-title fs-4 text-primary">${name}</h2>
-                                <span class="material-icons">
+                                <span class="material-icons text-primary">
                                     ${role ==`Engineer`? `engineering` :
                                         role ==`Intern`? `history_edu` : `cases`}
                                 </span>
                             </div>
                             <div class="mb-2 border-bottom pb-2 border-primary">
-                                <h3 class="card-subtitle text-muted fs-5">${role}</h3>
+                                <h3 class="card-subtitle text-secondary fs-5">${role}</h3>
                             </div>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item card-text m-0 pb-1 fw-bold">ID: ${id}</>
